# social-gaming

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/backendcomponents/: CMakeLists.txt
lib/backendcomponents/include/: ExecutionQueue.h  Parser.h  ParserLibrary.h  RequestStruct.h  ResponseQueue.h  Structures.h
lib/backendcomponents/src/: ExecutionQueue.cpp  Parser.cpp  ParserLibrary.cpp  RequestStruct.cpp  ResponseQueue.cpp
lib/components/: CMakeLists.txt
lib/components/include/: CreateGamePage.h  CreateGameSessionPage.h  GameComponent.h  GameComponentsManager.h  GameConfigPage.h  GamePlayPage.h  JoinGamePage.h  LandingPage.h  LoadingPage.h  MainPageContent.h  MobileLandingPage.h  NamePage.h  TestGameComponent.h  createNewGamePage.h
lib/components/src/: CreateGamePage.cpp  CreateGameSessionPage.cpp  CreateNewGamePage.cpp  GameComponent.cpp  GameComponentsManager.cpp  GameConfigPage.cpp  GamePlayPage.cpp  JoinGamePage.cpp  LandingPage.cpp  LoadingPage.cpp  MainPageContent.cpp  MobileLandingPage.cpp  NamePage.cpp  TestGameComponent.cpp
lib/constants/: CMakeLists.txt
lib/constants/include/: Constants.h
lib/datatypes/: CMakeLists.txt
lib/datatypes/include/: DataTypes.h
lib/datatypes/src/: DataTypes.cpp
lib/exceptions/: CMakeLists.txt
lib/exceptions/include/: CustomExceptions.h
lib/exceptions/src/: CustomExceptions.cpp
lib/executionnodes/: CMakeLists.txt
lib/executionnodes/include/: ExpressNodes.h  Nodes.h  Tree.h
lib/executionnodes/src/: ExpressNodes.cpp  Nodes.cpp  Tree.cpp
lib/gameclasses/: AudienceMember.cpp  CMakeLists.txt  Game.cpp  GameConstant.cpp  GameList.cpp  GameSessionHandler.cpp  GameSessionList.cpp  GameVariable.cpp  GamesDatabase.cpp  User.cpp
lib/gameclasses/include/: AudienceMember.h  Game.h  GameConstant.h  GameSessionHandler.h  GameSessionList.h  GameVariable.h  GamesDatabase.h  Player.h  User.h
lib/generators/: CMakeLists.txt
lib/generators/include/: RandomIdGenerator.h  RoomCodeGenerator.h
lib/generators/src/: RandomIdGenerator.cpp  RoomCodeGenerator.cpp
lib/networking/: CMakeLists.txt
lib/networking/include/: ClientWrapper.h  DataClasses.h
lib/networking/src/: ClientWrapper.cpp  DataClasses.cpp
src/: AudienceMember.cpp  Game.cpp  GameList.cpp  GameSessionHandler.cpp  GameState.cpp  GameStatus.cpp  GameVariable.cpp  Player.cpp  User.cpp
src/include/: AudienceMember.h  Game.h  GameConstant.h  GameList.h  GameSessionHandler.h  GameState.h  GameStatus.h  GameVariable.h  Player.h  User.h
test/: AudienceMemberTests.cpp  CMakeLists.txt  CustomExceptionsTests.cpp  ExecutionNodeQueueTests.cpp  GameClassTests.cpp  GameConstantTests.cpp  GameListTests.cpp  GameSessionHandlerTests.cpp  GameSessionListTests.cpp  GameVariableTests.cpp  GamesDatabaseTests.cpp  ParserLibraryTests.cpp  PlayerTests.cpp  RandomIdGeneratorTests.cpp  ResponseQueueTests.cpp  RoomCodeGeneratorTests.cpp  UserTests.cpp
tools/: CMakeLists.txt
tools/client-ftxui/: CMakeLists.txt  hotclient.cpp  index.html  mobile_hotclient.cpp
tools/examples/: CMakeLists.txt  ParserLibraryExample.cpp
tools/parser/: CMakeLists.txt  parser_test.cpp  rule_interpreter.cpp  variable_parser.cpp
tools/parser/gameSpecs/: empty_spec.txt  rock_paper_scissors.txt  test_spec.txt
tools/parser/include/: parser_test.h  rule_interpreter.h  variable_parser.h
tools/server/: CMakeLists.txt  hotserver.cpp  plRunner.cpp
